tenzir/functional-test/data/reference/pipelines_local/test_Chart_Attributes/step_02.ref
error: could not parse `chart` operator
 --> <input>:1:24
  |
1 | from stdin read json | chart donut
  |                        ^^^^^^^^^^^ 
  |
  = note: !! syntax_error: failed to parse operator arguments: ''